testsuite/good/observers/test_publisher_extends/Event1.flux
type Event1 {}
attributes {
    var int x;
}