testsuite/bad/UsingReservedIdentifier2.flux
type UsingReservedIdentifier2 {
   void ok();
}
attributes {
   var int _notAllowed;
}